--- a/src/app/admin/critiques/critiques.component.html
+++ b/src/app/admin/critiques/critiques.component.html
@@ -18,23 +18,27 @@
         <td mat-cell *matCellDef="let critique"> {{critique.artist}} </td>
       </ng-container>
       <ng-container matColumnDef="article">
-        <th mat-header-cell *matHeaderCellDef>מאמר</th>
-        <td mat-cell *matCellDef="let critique">
+        <th mat-header-cell style="min-width: 100px"  *matHeaderCellDef>מאמר</th>
+        <td mat-cell style="min-width: 100px" *matCellDef="let critique">
           <a *ngIf="critique.article" href="{{critique.article}}" target="_blank">הורדה</a>
         </td>
       </ng-container>
       <ng-container matColumnDef="date">
-        <th mat-header-cell *matHeaderCellDef>תאריך</th>
-        <td mat-cell *matCellDef="let critique"> {{critique.date}} </td>
+        <th mat-header-cell style="min-width: 120px"  *matHeaderCellDef>תאריך</th>
+        <td mat-cell style="min-width: 120px"  *matCellDef="let critique"> {{critique.date}} </td>
       </ng-container>
-      <ng-container matColumnDef="פעולות">
+      <ng-container matColumnDef="paper">
+        <th mat-header-cell style="max-width: 120px" *matHeaderCellDef>עיתון</th>
+        <td mat-cell style="max-width: 120px" *matCellDef="let critique"> {{critique.paper}} </td>
+      </ng-container>
+      <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef>פעולות</th>
         <td mat-cell *matCellDef="let critique" class="actions">
-          <button class="btn delete-btn" mat-button>
-            <mat-icon>delete</mat-icon><span class="delete-btn"> מחיקה</span>
+          <button class="btn delete-btn" mat-icon-button (click)="deleteDialog(critique.id)">
+            <mat-icon>delete</mat-icon>
           </button>
-          <button class="btn edit-btn" mat-button (click)="openEditCritiqueDialog(critique)">
-            <mat-icon>edit</mat-icon><span class="edit-btn"> עריכה</span>
+          <button class="btn edit-btn" mat-icon-button (click)="openEditCritiqueDialog(critique)">
+            <mat-icon>edit</mat-icon>
           </button>
         </td>
       </ng-container>
