--- a/src/app/components/critique/critique-list.component.html
+++ b/src/app/components/critique/critique-list.component.html
@@ -11,10 +11,10 @@
     <mat-table #table [dataSource]="sortedData" [trackBy]="trackByUid" class="critiques-table mat-elevation-z4" matSort
                [class.isMobile]="isMobile">
       <ng-container matColumnDef="title">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>כותרת</mat-header-cell>
-        <mat-cell *matCellDef="let critique">
+        <mat-header-cell *matHeaderCellDef style="min-width:400px" mat-sort-header>כותרת</mat-header-cell>
+        <mat-cell *matCellDef="let critique" style="min-width:400px">
           <span class="mobile-label">כותרת:</span>
-          <span>{{critique.title}}</span>
+          <strong>{{critique.title}}</strong>
         </mat-cell>
       </ng-container>
       <ng-container matColumnDef="museum">
@@ -29,24 +29,35 @@
           <span class="mobile-label">אמן:</span>
           <span>{{critique.artist}}</span> </mat-cell>
       </ng-container>
+      <ng-container matColumnDef="paper">
+        <mat-header-cell *matHeaderCellDef>עיתון</mat-header-cell>
+        <mat-cell *matCellDef="let critique">
+          <span class="mobile-label">עיתון:</span>
+          <span>{{critique.paper}}</span>
+        </mat-cell>
+      </ng-container>
       <ng-container matColumnDef="article">
         <mat-header-cell *matHeaderCellDef>מאמר</mat-header-cell>
         <mat-cell *matCellDef="let critique">
           <span class="mobile-label">מאמר:</span>
-          <a *ngIf="critique.article" href="{{critique.article}}">קישור להורדה</a> </mat-cell>
+          <a *ngIf="critique.article" href="{{critique.article}}">מאמר</a> </mat-cell>
       </ng-container>
       <ng-container matColumnDef="date">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>תאריך</mat-header-cell>
-        <mat-cell *matCellDef="let critique">
-          <span class="mobile-label">תאריך:</span>
-          <span>{{critique.date | date: 'dd/MM/yyyy'}}</span> </mat-cell>
+        <mat-header-cell *matHeaderCellDef mat-sort-header style="max-width: 120px">תאריך</mat-header-cell>
+        <mat-cell *matCellDef="let critique" style="max-width: 120px">
+          <ng-container *ngIf="critique.date !== ''">
+            <span class="mobile-label">תאריך:</span>
+            <span>{{critique.date | date: 'dd/MM/yyyy'}}</span>
+          </ng-container>
+        </mat-cell>
       </ng-container>
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
       <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
     </mat-table>
-    <mat-paginator [length]="200" [pageSizeOptions]="[10, 50, 100]" aria-label="Select page"></mat-paginator>
+<!--    <mat-paginator [length]="200" [pageSizeOptions]="[10, 50, 100]" aria-label="Select page"></mat-paginator>-->
     <div *ngIf="listLength === 0" class="no-results">
       <h3>אין תוצאות</h3>
     </div>
   </ng-container>
+  <p></p>
 </div>
