--- a/src/app/todo-boards/boards-list/boards-list.component.css
+++ b/src/app/todo-boards/boards-list/boards-list.component.css
@@ -9,7 +9,7 @@
   width: auto;
   padding: 24px;
   display: flex;
-  flex-direction: row;
+  flex-direction: row-reverse;
   overflow-x: scroll;
 }
 
