--- a/src/app/todo-boards/boards-list/boards-list.component.html
+++ b/src/app/todo-boards/boards-list/boards-list.component.html
@@ -5,19 +5,18 @@
   (cdkDropListDropped)="drop($event)"
   cdkDropListOrientation="horizontal"
 >
-  <app-board cdkDrag *ngFor="let board of boards" [board]="board">
-    <mat-icon cdkDragHandle class="handle">drag_indicator</mat-icon>
-  </app-board>
-
   <div class="board-button">
     <button
       mat-raised-button
       color="accent"
       cdkDragDisabled
-      (click)="openBoardDialog()"
+      (click)="createBoard()"
     >
-      New Board
+      רשימה חדשה
     </button>
   </div>
+  <app-board cdkDrag *ngFor="let board of boards" [board]="board">
+    <mat-icon cdkDragHandle class="handle">drag_indicator</mat-icon>
+  </app-board>
 </div>
 </div>
