--- a/src/app/todo-boards/dialogs/board-dialog/board-dialog.component.html
+++ b/src/app/todo-boards/dialogs/board-dialog/board-dialog.component.html
@@ -1,13 +1,15 @@
-<h1 mat-dialog-title>Board</h1>
+<div class="modal-task-container">
+<h1 mat-dialog-title>רשימה</h1>
 <div mat-dialog-content>
-<p>What shall we call this board?</p>
+  <p>כותרת</p>
   <mat-form-field>
     <input placeholder="title" matInput [(ngModel)]="data.title" />
   </mat-form-field>
 </div>
 <div mat-dialog-actions>
-  <button mat-button (click)="onNoClick()">Cancel</button>
+  <button mat-button (click)="onNoClick()">ביטול</button>
   <button mat-button [mat-dialog-close]="data.title" cdkFocusInitial>
-    Create
+    יצירה
   </button>
+</div>
 </div>
