--- a/src/app/todo-boards/dialogs/task-dialog/task-dialog.component.html
+++ b/src/app/todo-boards/dialogs/task-dialog/task-dialog.component.html
@@ -1,5 +1,5 @@
 <div class="modal-task-container">
-<h1 mat-dialog-title>Task</h1>
+<h1 mat-dialog-title>{{ data.isNew ? 'Add Task' : 'Update Task' }}</h1>
   <div mat-dialog-content class="content">
     <mat-form-field>
       <textarea
@@ -24,9 +24,8 @@
     <button mat-button [mat-dialog-close]="data" cdkFocusInitial>
       {{ data.isNew ? 'Add Task' : 'Update Task' }}
     </button>
-    <!-- <app-delete-button
-      (delete)="handleTaskDelete()"
+    <app-delete-button (delete)="handleTaskDelete()"
       *ngIf="!data.isNew"
-    ></app-delete-button> -->
+    ></app-delete-button>
   </div>
 </div>
