--- a/src/app/admin/books/books.component.css
+++ b/src/app/admin/books/books.component.css
@@ -60,16 +60,16 @@ ul.books-list {
 }
 
 .btn-add {
-  background: #d3daaa;
+  background: #BCE0A3;
   font-weight: bold;
   color: #343919;
 }
 
 .btn {
-  background: pink;
+  background: #EC6F6F;
 }
 
 .edit-btn {
-  background: #d3daaa;
+  background: #BCE0A3;
   color: #343919;
 }
