--- a/src/app/admin/critiques/critiques.component.css
+++ b/src/app/admin/critiques/critiques.component.css
@@ -36,18 +36,18 @@ span.mat-list-item-content {
 }
 
 .btn-add {
-  background: #d3daaa;
+  background: #BCE0A3;
   font-weight: bold;
   color: #343919;
 }
 
 .btn {
-  background: pink;
+  background: #EC6F6F;
   margin-top: 10px;
   margin-bottom: 10px;
 }
 
 .edit-btn {
-  background: #d3daaa;
+  background: #BCE0A3;
   color: #343919;
 }
