--- a/src/app/shared/modals/confirm.modal/confirm.modal.component.html
+++ b/src/app/shared/modals/confirm.modal/confirm.modal.component.html
@@ -1,6 +1,9 @@
-<h2 mat-dialog-title>Are You Sure?</h2>
+<div class="mat-dialog-title">
+  <h3 mat-dialog-title>אתה בטוח?</h3>
+</div>
 <mat-dialog-content class="mat-typography">
-  Do you wish to delete {{componentName}}
+  האם אתה רוצה למחוק את <strong>{{title}}</strong>?
+  <p></p>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button mat-dialog-close>Cancel</button>
