--- a/src/app/admin/articles/add-edit-article/add-edit-article.component.html
+++ b/src/app/admin/articles/add-edit-article/add-edit-article.component.html
@@ -31,7 +31,7 @@
 </form>
 </mat-dialog-content>
 <mat-dialog-actions>
-  <button type="button" class="btn">ביטול</button>
+  <button type="button" class="btn" (click)="close()">ביטול</button>
   <button *ngIf="isEdit" type="submit" class="badge badge-success" (click)="updateBook()">
     עדכון
   </button>
