--- a/src/app/admin/books/add-edit-book/add-edit-book.component.html
+++ b/src/app/admin/books/add-edit-book/add-edit-book.component.html
@@ -42,7 +42,7 @@
   </form>
 </mat-dialog-content>
 <mat-dialog-actions>
-  <button type="button" class="btn">ביטול</button>
+  <button type="button" class="btn" (click)="closeModal()">ביטול</button>
   <button *ngIf="isEdit" type="submit" class="badge badge-success" (click)="updateBook()">
     עדכון
   </button>
