--- a/src/app/components/catalogs-list/catalogs-list.component.html
+++ b/src/app/components/catalogs-list/catalogs-list.component.html
@@ -12,7 +12,7 @@
     </form>
   </div>
   <ul class="catalog-list" *ngIf="catalogs$ | async as catalogs">
-    <li class="catalog-item" *ngFor="let catalog of catalogs | filter: term; let i = index">
+    <li class="catalog-item" *ngFor="let catalog of catalogs | filter: term; trackBy: getIdTrack">
       <div class="catalog-image">
         <img *ngIf="catalog?.imgUrl" src="{{catalog?.imgUrl}}" alt="img" width="160">
       </div>
