Added video-lectures and fixed ui issues in catalogs

--- a/src/app/admin/catalogs/add-catalog/add-catalog.component.html
+++ b/src/app/admin/catalogs/add-catalog/add-catalog.component.html
@@ -22,6 +22,10 @@
       </div>
       <div class="column">
         <mat-form-field>
+          <mat-label>image</mat-label>
+          <input matInput formControlName="image" class="form-control" placeholder="הכנס תמונה" />
+        </mat-form-field>
+        <mat-form-field>
           <mat-label>שפה</mat-label>
           <input formControlName="language" class="form-control" name="year" placeholder="הכנס שנה" type="text" matInput />
         </mat-form-field>
