--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -17,6 +17,9 @@
       <a routerLink="articles" [ngClass]="{'nav-link': true, 'active' : isActive('articles')}">מאמרים</a>
     </li>
     <li class="nav-item">
+      <a routerLink="video-lecture" [ngClass]="{'nav-link': true, 'active' : isActive('video-lecture')}">הרצאות מוקלטות</a>
+    </li>
+    <li class="nav-item">
       <a routerLink="about" [ngClass]="{'nav-link': true, 'active' : isActive('about')}">אודות</a>
     </li>
   </ul>
