--- a/src/app/admin/catalogs/catalog/catalog.component.html
+++ b/src/app/admin/catalogs/catalog/catalog.component.html
@@ -1,5 +1,5 @@
 <div class="catalog-image">
-  <img *ngIf="catalog?.imgUrl" src="{{catalog?.imgUrl}}" alt="img" width="160">
+  <img *ngIf="catalog?.image" src="{{catalog?.image}}" alt="img" width="160">
 </div>
 <div class="catalog-text">
   <h4>{{ catalog?.title }}</h4> <span>{{catalog?.gallery}} {{catalog?.year}}</span>
