--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -1,10 +1,11 @@
 <h2 class="admin-title">ניהול</h2>
 <div class="container">
   <div class="admin-actions">
-    <a routerLink="catalogs" class="btn mat-button">קטלוגים</a>
-    <a routerLink="books" class="btn mat-button">ספרים</a>
-    <a routerLink="articles" class="btn mat-button">מאמרים</a>
-    <a routerLink="critiques" class="btn mat-button">ביקורת תערוכות</a>
+    <a routerLink="catalogs" class="btn mat-button" [ngClass]="{'active' : isActive('catalogs')}">קטלוגים</a>
+    <a routerLink="books" class="btn mat-button" [ngClass]="{'active' : isActive('books')}">ספרים</a>
+    <a routerLink="articles" class="btn mat-button" [ngClass]="{'active' : isActive('articles')}">מאמרים</a>
+    <a routerLink="critiques" class="btn mat-button" [ngClass]="{'active' : isActive('critique')}">ביקורת תערוכות</a>
+    <a routerLink="video-lectures" class="btn mat-button" [ngClass]="{'active' : isActive('video-lecture')}">הרצאות מוקלטות</a>
   </div>
   <router-outlet></router-outlet>
 </div>
