--- a/src/app/components/catalogs-list/catalogs-list.component.css
+++ b/src/app/components/catalogs-list/catalogs-list.component.css
@@ -38,15 +38,20 @@ input::placeholder {
 
 .catalog-item {
   display: flex;
+  flex-direction: column;
   text-align: right;
   gap: 1rem;
   font-size: 14px;
+  max-width: 355px;
+}
+
+.catalog-image {
+  display: flex;
+  justify-content: center;
 }
 
 .catalog-image img {
-  border-radius: 6px;
   border: 2px solid grey;
-  height: 140px;
   object-fit: cover;
 }
 
@@ -54,6 +59,17 @@ input::placeholder {
   display: flex;
   flex-direction: column;
   font-size: 16px;
+}
+
+.files {
+  display: flex;
+  justify-content: space-between;
+  width: 100%
+}
+
+.files a {
+  display: flex;
+  line-height: 20px;
 }
 
 @media only screen and (max-width: 1300px) {
