--- a/src/styles.css
+++ b/src/styles.css
@@ -17,9 +17,34 @@
   box-sizing: border-box;
 }
 
-html, body { height: 100%; font-family: 'Frank Ruhl Libre', sans-serif; font-weight: 500; font-size: 16px;}
+html {
+  --scrollbarBG: #CFD8DC;
+  --thumbBG: #90A4AE;
+}
 
-body { margin: 0; overflow-x: hidden; }
+body::-webkit-scrollbar {
+  width: 11px;
+}
+
+html, body {
+  height: 100%;
+  font-family: 'Frank Ruhl Libre', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  scrollbar-width: thin;
+  scrollbar-color: var(--thumbBG) var(--scrollbarBG);
+}
+
+body::-webkit-scrollbar-track {
+  background: var(--scrollbarBG);
+}
+body::-webkit-scrollbar-thumb {
+  background-color: var(--thumbBG) ;
+  border-radius: 6px;
+  border: 3px solid var(--scrollbarBG);
+}
+
+body { margin: 0; overflow-x: hidden; scrollbar-color: rebeccapurple green; }
 
 
 .material-icons{
