--- a/src/app/admin/video-lectures/video-lectures.component.html
+++ b/src/app/admin/video-lectures/video-lectures.component.html
@@ -1,1 +1,47 @@
-<p>video-lectures works!</p>
+<h3>הרצאות מוקלטות</h3>
+<div class="actions">
+  <button (click)="addVideoLecture()" class="btn-add">
+    הוסף מאמר
+  </button>
+</div>
+<div class="videos-container">
+  <mat-table #table [dataSource]="videos" class="mat-elevation-z4" matSort>
+    <ng-container matColumnDef="title">
+      <mat-header-cell *matHeaderCellDef class="title">כותרת</mat-header-cell>
+      <mat-cell *matCellDef="let video" class="title">
+        <span>{{video.title}}</span>
+      </mat-cell>
+    </ng-container>
+    <ng-container matColumnDef="videoId">
+      <mat-header-cell *matHeaderCellDef class="title">מזהה וידיאו</mat-header-cell>
+      <mat-cell *matCellDef="let video" class="title">
+        <span>{{video.videoId}}</span>
+      </mat-cell>
+    </ng-container>
+    <ng-container matColumnDef="date">
+      <mat-header-cell *matHeaderCellDef class="title">תאריך</mat-header-cell>
+      <mat-cell *matCellDef="let video" class="title">
+        <span>{{video.date}}</span>
+      </mat-cell>
+    </ng-container>
+    <ng-container matColumnDef="link">
+      <mat-header-cell *matHeaderCellDef class="title">קישור</mat-header-cell>
+      <mat-cell *matCellDef="let video" class="title">
+        <span>{{video.link}}</span>
+      </mat-cell>
+    </ng-container>
+    <ng-container matColumnDef="actions">
+      <mat-header-cell *matHeaderCellDef class="title">כותרת</mat-header-cell>
+      <mat-cell *matCellDef="let video" class="title">
+        <button (click)="editVideoLecture(video)">
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button (click)="deleteVideoLecture(video.id)">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </mat-cell>
+    </ng-container>
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+  </mat-table>
+</div>
