--- a/src/app/admin/articles/articles.component.css
+++ b/src/app/admin/articles/articles.component.css
@@ -1,3 +1,7 @@
+:host {
+  width: 100%;
+}
+
 .articles-container {
   width: 100%;
   margin: 0 auto;
@@ -5,8 +9,7 @@
 }
 
 h3 {
-  font-weight: bolder;
-  font-size: 24px;
+  font-size: 28px;
 }
 
 h4 {
