--- a/src/app/components/articles/articles.component.html
+++ b/src/app/components/articles/articles.component.html
@@ -1,9 +1,9 @@
 <div class="articles-container" fxLayout="column">
   <h3>מאמרים</h3>
   <div class="search">
-    <mat-form-field>
-      <input type="text" #input class="search-input"
-             matInput (keyup)="doFilter($event)" placeholder="חפש">
+    <mat-form-field class="input-search">
+      <input matInput placeholder="חפש" #searchInput (keyup)="applyFilter()">
+      <mat-icon matSuffix>search</mat-icon>
     </mat-form-field>
   </div>
   <ng-container *ngIf="sortedData">
@@ -31,18 +31,19 @@
           </ng-container>
         </mat-cell>
       </ng-container>
-<!--      <ng-container matColumnDef="date">-->
-<!--        <mat-header-cell *matHeaderCellDef>תאריך</mat-header-cell>-->
-<!--        <mat-cell *matCellDef="let article">-->
-<!--          <ng-container *ngIf="article.date">-->
-<!--            <span class="mobile-label">תאריך:</span>-->
-<!--            <span>{{article.date | date: 'dd/MM/yyyy'}}</span>-->
-<!--          </ng-container>-->
-<!--        </mat-cell>-->
-<!--      </ng-container>-->
+     <ng-container matColumnDef="date">
+       <mat-header-cell *matHeaderCellDef>תאריך</mat-header-cell>
+       <mat-cell *matCellDef="let article">
+         <ng-container *ngIf="article.date">
+           <span class="mobile-label">תאריך:</span>
+           <span>{{article.date}}</span>
+         </ng-container>
+       </mat-cell>
+     </ng-container>
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
       <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
     </mat-table>
+
 <!--    <mat-paginator [length]="200" [pageSizeOptions]="[10, 50, 100]" aria-label="Select page"></mat-paginator>-->
     <div *ngIf="listLength === 0" class="no-results">
       <h3>אין תוצאות</h3>
