Fixed catalogs search

--- a/src/app/components/catalogs-list/catalogs-list.component.html
+++ b/src/app/components/catalogs-list/catalogs-list.component.html
@@ -1,15 +1,14 @@
 <div class="catalogs-list" fxLayout="column">
   <h3>קטלוגים</h3>
   <div class="search">
-    <form class="example-form">
-      <mat-form-field>
-        <input type="text" class="search-input"
+      <mat-form-field  class="input-search">
+        <input type="text"
               matInput
-              name="search"
               placeholder="Search catalogs"
+              style="width:100%"
               [(ngModel)]="term">
+          <mat-icon matSuffix>search</mat-icon>
       </mat-form-field>
-    </form>
   </div>
   <ul class="catalog-list" *ngIf="catalogs$ | async as catalogs">
     <li class="catalog-item" *ngFor="let catalog of catalogs | filter: term; trackBy: getIdTrack">
