--- a/src/app/components/critique/critique-list.component.html
+++ b/src/app/components/critique/critique-list.component.html
@@ -2,8 +2,9 @@
 <div class="critiques-list" fxLayout="column">
   <h3>בקורת תערוכות</h3>
   <div class="search">
-      <mat-form-field>
-        <input matInput #searchInput (keyup)="applyFilter()" placeholder="חפש">
+      <mat-form-field class="input-search">
+        <input matInput placeholder="חפש" #searchInput (keyup)="applyFilter()">
+        <mat-icon matSuffix>search</mat-icon>
       </mat-form-field>
   </div>
   <ng-container *ngIf="sortedData">
@@ -40,15 +41,6 @@
           <span class="mobile-label">מאמר:</span>
           <a *ngIf="critique.article" href="{{critique.article}}">מאמר</a> </mat-cell>
       </ng-container>
-      <ng-container matColumnDef="date">
-        <mat-header-cell *matHeaderCellDef mat-sort-header style="max-width: 120px">תאריך</mat-header-cell>
-        <mat-cell *matCellDef="let critique" style="max-width: 120px">
-          <ng-container *ngIf="critique.date !== ''">
-            <span class="mobile-label">תאריך:</span>
-            <span>{{critique.date}}</span>
-          </ng-container>
-        </mat-cell>
-      </ng-container>
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
       <mat-row *matRowDef="let row; columns: displayedColumns" class="animate"></mat-row>
     </mat-table>
@@ -57,5 +49,4 @@
       <h3>אין תוצאות</h3>
     </div>
   </ng-container>
-  <p></p>
 </div>
