Finished add video and display in list

--- a/src/app/admin/video-lectures/add-eddit-video/add-eddit-video.component.html
+++ b/src/app/admin/video-lectures/add-eddit-video/add-eddit-video.component.html
@@ -29,6 +29,10 @@
       <mat-label>מזהה וידיאו</mat-label>
       <input formControlName="videoId" class="form-control" type="text" matInput />
     </mat-form-field>
+    <mat-form-field>
+      <mat-label>תמונה</mat-label>
+      <input formControlName="thumbnail" class="form-control" type="text" matInput />
+    </mat-form-field>
   </form>
   <!-- <div *ngIf="submitted">
     <h4>You submitted successfully!</h4>
