--- a/src/app/admin/video-lectures/video-lectures.component.html
+++ b/src/app/admin/video-lectures/video-lectures.component.html
@@ -12,27 +12,27 @@
         <span>{{video.title}}</span>
       </mat-cell>
     </ng-container>
-    <ng-container matColumnDef="videoId">
+    <!-- <ng-container matColumnDef="videoId">
       <mat-header-cell *matHeaderCellDef class="title">מזהה וידיאו</mat-header-cell>
       <mat-cell *matCellDef="let video" class="title">
         <span>{{video.videoId}}</span>
       </mat-cell>
-    </ng-container>
-    <ng-container matColumnDef="date">
-      <mat-header-cell *matHeaderCellDef class="title">תאריך</mat-header-cell>
-      <mat-cell *matCellDef="let video" class="title">
-        <span>{{video.date}}</span>
-      </mat-cell>
-    </ng-container>
+    </ng-container> -->
     <ng-container matColumnDef="link">
       <mat-header-cell *matHeaderCellDef class="title">קישור</mat-header-cell>
       <mat-cell *matCellDef="let video" class="title">
         <span>{{video.link}}</span>
       </mat-cell>
     </ng-container>
+    <ng-container matColumnDef="date">
+      <mat-header-cell *matHeaderCellDef class="cell-date">תאריך</mat-header-cell>
+      <mat-cell *matCellDef="let video" class="cell-date">
+        <span>{{video.date}}</span>
+      </mat-cell>
+    </ng-container>
     <ng-container matColumnDef="actions">
-      <mat-header-cell *matHeaderCellDef class="title">כותרת</mat-header-cell>
-      <mat-cell *matCellDef="let video" class="title">
+      <mat-header-cell *matHeaderCellDef class="cell-actions"></mat-header-cell>
+      <mat-cell *matCellDef="let video" class="cell-actions">
         <button (click)="editVideoLecture(video)">
           <mat-icon>edit</mat-icon>
         </button>
