--- a/src/app/video-lecture/video-lecture.component.css
+++ b/src/app/video-lecture/video-lecture.component.css
@@ -1,8 +1,16 @@
+.page-container {
+  width: 100%;
+  padding: 1em;
+  margin: 0 auto;
+}
+
 .videos-container {
   width: 100%;
   margin: 0 auto;
   padding: 1em;
-  height: calc(100vh - 100px);
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap:1.5em;
 }
 
 h3 {
@@ -22,7 +30,6 @@ h3 {
 .info {
   font-size: 26px;
   line-height: 30px;
-  word-break: break-all;
-  width: 310px;
-  text-align: center;
+  word-break: break-word;
+  width: 320px;
 }
