--- a/src/app/video-lecture/video-lecture.component.html
+++ b/src/app/video-lecture/video-lecture.component.html
@@ -1,11 +1,12 @@
-<div class="videos-container">
+<div class="page-container">
   <h3>הרצאות מוקלטות</h3>
-  <ng-container *ngFor="let video of videosList">
-    <div class="video">
-      <a href="{{video.link}}" target="_blank"><img src="{{'https://img.youtube.com/vi/' + video.videoId + '/0.jpg'}}" alt="{{video.title}}"/></a>
+  <div class="videos-container">
+    <div class="video" *ngFor="let video of videosList">
+      <a *ngIf="video.videoId" href="{{video.link}}" target="_blank"><img src="{{'https://img.youtube.com/vi/' + video.videoId + '/0.jpg'}}" alt="{{video.title}}"/></a>
+      <a *ngIf="video.thumbnail" href="{{video.link}}" target="_blank"><img src="{{video.thumbnail}}" alt="{{video.title}}"/></a>
       <div class="info">
-        {{video.title}}
+        {{video.title}} {{video.date}}
       </div>
     </div>
-  </ng-container>
+  </div>
 </div>
