--- a/src/app/catalogs/catalogs-list.component.css
+++ b/src/app/catalogs/catalogs-list.component.css
@@ -2,6 +2,7 @@
   width: 100%;
   padding: 1em;
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   margin: 0 auto;
 }
