Fixes for articles and catalogs

--- a/src/app/admin/articles/add-edit-article/add-edit-article.component.html
+++ b/src/app/admin/articles/add-edit-article/add-edit-article.component.html
@@ -13,7 +13,7 @@
       </mat-error>
     </mat-form-field>
     <mat-form-field>
-      <mat-label>עטיפה</mat-label>
+      <mat-label>קישור</mat-label>
       <input matInput formControlName="link" class="form-control" name="link" placeholder="הכנס קישור" />
     </mat-form-field>
     <mat-form-field>
