--- a/src/app/articles/articles.component.html
+++ b/src/app/articles/articles.component.html
@@ -13,7 +13,7 @@
         <mat-header-cell *matHeaderCellDef>כותרת</mat-header-cell>
         <mat-cell *matCellDef="let article">
           <span class="mobile-label">כותרת:</span>
-          <span>{{article.title}}</span>
+          <a *ngIf="article?.link" target="_blank" href="{{article.link}}">{{article.title}}</a>
         </mat-cell>
       </ng-container>
       <ng-container matColumnDef="publication">
@@ -22,24 +22,15 @@
           <span class="mobile-label">עיתון:</span>
           <span>{{article.publication}}</span> </mat-cell>
       </ng-container>
-      <ng-container matColumnDef="link">
-        <mat-header-cell *matHeaderCellDef>כתבה</mat-header-cell>
-        <mat-cell *matCellDef="let article">
-          <ng-container *ngIf="article.link">
-          <span class="mobile-label">כתבה:</span>
-          <a *ngIf="article?.link" target="_blank" href="{{article.link}}">קישור</a>
+      <ng-container matColumnDef="date">
+        <mat-header-cell *matHeaderCellDef style="max-width: 120px">תאריך</mat-header-cell>
+        <mat-cell style="max-width: 120px" *matCellDef="let article">
+          <ng-container *ngIf="article.date">
+            <span class="mobile-label">תאריך:</span>
+            <span>{{article.date | date: 'MM/yyyy'}}</span>
           </ng-container>
         </mat-cell>
       </ng-container>
-     <ng-container matColumnDef="date">
-       <mat-header-cell *matHeaderCellDef>תאריך</mat-header-cell>
-       <mat-cell *matCellDef="let article">
-         <ng-container *ngIf="article.date">
-           <span class="mobile-label">תאריך:</span>
-           <span>{{article.date}}</span>
-         </ng-container>
-       </mat-cell>
-     </ng-container>
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
       <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
     </mat-table>
