--- a/src/app/admin/articles/articles.component.css
+++ b/src/app/admin/articles/articles.component.css
@@ -49,10 +49,11 @@ h4:hover {
   width:350px;
 }
 
-.mat-header-cell.actions {
+.mat-header-cell.actions, .mat-cell.actions,
+.mat-header-cell.date, .mat-cell.date {
   display: flex;
   gap: .5em;
-  max-width: 50px;
+  max-width: 120px;
 }
 
 .btn-add {
