--- a/src/app/articles/articles.component.html
+++ b/src/app/articles/articles.component.html
@@ -17,14 +17,14 @@
         </mat-cell>
       </ng-container>
       <ng-container matColumnDef="publication">
-        <mat-header-cell *matHeaderCellDef>עיתון/מגזין</mat-header-cell>
-        <mat-cell *matCellDef="let article">
+        <mat-header-cell *matHeaderCellDef class="paper">עיתון/מגזין</mat-header-cell>
+        <mat-cell *matCellDef="let article" class="paper">
           <span class="mobile-label">עיתון:</span>
           <span>{{article.publication}}</span> </mat-cell>
       </ng-container>
       <ng-container matColumnDef="date">
-        <mat-header-cell *matHeaderCellDef style="max-width: 120px">תאריך</mat-header-cell>
-        <mat-cell style="max-width: 120px" *matCellDef="let article">
+        <mat-header-cell *matHeaderCellDef class="date">תאריך</mat-header-cell>
+        <mat-cell class="date" *matCellDef="let article">
           <ng-container *ngIf="article.date">
             <span class="mobile-label">תאריך:</span>
             <span>{{article.date | date: 'MM/yyyy'}}</span>
